syntax = "proto3";
package zetachain.zetacore.crosschain;

option go_package = "github.com/zeta-chain/node/x/crosschain/types";

message TxHash {
  string tx_hash = 1;
  string tx_signer = 2;
  bool proved = 3;
}
message OutboundTracker {
  string index = 1; // format: "chain-nonce"
  int64 chain_id = 2;
  uint64 nonce = 3;
  repeated TxHash hash_list = 4;
}
