syntax = "proto3";
package zetachain.zetacore.observer;

import "gogoproto/gogo.proto";

option go_package = "github.com/zeta-chain/node/x/observer/types";

message TSS {
  string tss_pubkey = 3;
  repeated string tss_participant_list = 4;
  repeated string operator_address_list = 5;
  int64 finalizedZetaHeight = 6;
  int64 keyGenZetaHeight = 7;
}
